--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="resume">
       <div class="left">
         <div class="holder">
-          <img src="C:\Users\ARPAN BANERJEE\Desktop\New folder\resume\pic.png.jpg" width="150" height="200" />
+          <img src=".\pic.png.jpg" width="150" height="200" />
         </div>
         <div class="_contact_wrap pb_">
             <div class="title">contacts</div>
